// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PluginDetailHeader /> should renders with all props correctly 1`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-expand"
      />
      <i
        className="btn-icon fa fa-compress"
      />
    </PTButton>
  </div>
  <h3
    className="panel-title"
  >
    Test Title Panel
  </h3>
</div>
`;

exports[`Component <PluginDetailHeader /> should renders with all props correctly 2`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-expand"
      />
      <i
        className="btn-icon fa fa-compress"
      />
    </PTButton>
    <PTButton
      className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-chevron-up"
      />
    </PTButton>
  </div>
  <h3
    className="panel-title"
  >
    Test Title Panel
  </h3>
</div>
`;
